--- a/rpg_room_front/src/pages/createIdea/styles.css
+++ b/rpg_room_front/src/pages/createIdea/styles.css
@@ -17,17 +17,34 @@
     color: lightgrey;
     font-size: 40px;
     font-family: "Pangolin";
+    width: 100%;
+}
+
+fieldset{
+    text-align: center;
 }
 
 .create-word-form {
-    margin: 10px 0;
+    margin: 10px 10px;
     padding-left: 10px;
     color: lightgrey;
     font-size: 24px;
     font-family: "Roboto";
-    background-color:rgba(160, 160, 160, 0.4);
+    background-color:rgba(29, 29, 29, 0.4);
+    border: 1px solid rgba(243, 243, 76, 0.8);
+    width: 94%;
+    border-radius: 8px;
+}
+
+textarea {
+    color: lightgrey;
+    font-size: 16px;
+    font-family: "Roboto";
+    background-color:rgba(29, 29, 29, 0.4);
     border: 1px solid rgba(243, 243, 76, 0.8);
     border-radius: 8px;
+    width: 94%;
+    height: 537px;
 }
 
 span.create-icon {
@@ -45,7 +62,140 @@ header {
 
 form {
     padding: 0 100px;
+    display: inline-flex;
+    width: 100%;
 }
+form div {
+    width: 50%;
+}
+
+div h1 {
+    text-align: center;
+}
+
 fieldset {
     margin: 40px 0;
 }
+
+ul {
+    list-style: none;
+    margin: 0;
+}
+
+ul li {
+    width: 100px;
+    height: 100px;
+}
+
+.create-image-text:hover {
+    background-color: rgba(231, 231, 231, 0.5);
+    color: rgb(0,0,0);
+}
+
+.selected p {
+    background-color: rgba(231, 231, 231, 0.5) !important;
+    color: rgb(0,0,0) !important; 
+}
+
+ul h3 {
+    width: 100px;
+    height: 100px;
+}
+
+.create-type-ambient {
+    width: 100%;
+    margin-top: 0;
+    display: inline-block;
+    text-align: center;
+}
+
+.create-type-ambient div {
+    width: 45%;
+    display: inline-block;
+    border: 1px solid rgba(243, 243, 76, 0.8);
+    border-radius: 8px;
+    background-color: rgba(0,0,0,0.5);
+    margin: 5px 15px;
+}
+
+.create-grid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 150px);
+    justify-content: center;
+    justify-items: center;
+    gap: 5px;
+    padding: 0;
+}
+
+.create-grid li {
+    margin: 0px 0;
+}
+
+.create-image-text {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 8px;
+    font-family: Roboto;
+    font-weight: bold;
+    color: rgb(211, 211, 211);
+    text-align: center;
+    vertical-align: middle;
+    padding: 40% 0;
+}
+
+.create-time {
+    font-family: Roboto;
+    color: rgb(211, 211, 211);
+}
+
+.create-slider {
+    width: 90%;
+    fill: rgba(243, 243, 76, 0.8);
+    stroke: none;
+    
+}
+
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    input[type='range'] {
+      overflow: hidden;
+      -webkit-appearance: none;
+      background-color: rgba(231, 231, 231, 0.5);
+    }
+    
+    input[type='range']::-webkit-slider-runnable-track {
+      height: 10px;
+      width: 10px;
+      -webkit-appearance: none;
+      color: rgba(243, 243, 76, 0.8);
+      margin-top: -1px;
+    }
+    
+    input[type='range']::-webkit-slider-thumb {
+      width: 10px;
+      -webkit-appearance: none;
+      height: 10px;
+      cursor: ew-resize;
+      background: rgba(243, 243, 76);
+      box-shadow: -900px 0 0 900px rgba(243, 243, 76, 0.5);
+    }
+
+}
+/** FF
+input[type="range"]::-moz-range-progress {
+  background-color: #43e5f7; 
+}
+input[type="range"]::-moz-range-track {  
+  background-color: #9a905d;
+}
+*/
+/* IE
+input[type="range"]::-ms-fill-lower {
+  background-color: #43e5f7; 
+}
+input[type="range"]::-ms-fill-upper {  
+  background-color: #9a905d;
+}
+*/
