--- a/rpg_room_front/src/pages/createIdea/styles.css
+++ b/rpg_room_front/src/pages/createIdea/styles.css
@@ -47,13 +47,36 @@ textarea {
     height: 537px;
 }
 
-span.create-icon {
+span.create-icon-back {
     display: inline-flex;
     padding-top: 48px;
     font-size: 40px;
     color: rgb(230, 230, 112, 0.8);
     position: absolute;
     left: 5%;
+}
+
+span.create-icon-submit {
+    display: inline-flex;
+    margin-top: 40px;
+    font-size: 40px;
+    color: rgb(230, 230, 112, 0.8);
+    position: absolute;
+    right: 5%;
+    border-radius: 8px;
+    border: 1px solid rgba(243, 243, 76, 0.8);
+}
+
+span.create-icon-submit p {
+    font-size: 28px;
+    font-family: Roboto;
+    padding: 8px 8px 0px 8px;
+}
+
+span.create-icon-submit:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    color: rgb(0, 0, 0, 0.8);
+    border-color: rgb(0, 0, 0, 0.8);
 }
 
 header {
