--- a/rpg_room_front/src/pages/createIdea/styles.css
+++ b/rpg_room_front/src/pages/createIdea/styles.css
@@ -77,6 +77,7 @@ span.create-icon-submit:hover {
     background-color: rgba(255, 255, 255, 0.5);
     color: rgb(0, 0, 0, 0.8);
     border-color: rgb(0, 0, 0, 0.8);
+    cursor: pointer;
 }
 
 header {
@@ -113,6 +114,7 @@ ul li {
 .create-image-text:hover {
     background-color: rgba(231, 231, 231, 0.5);
     color: rgb(0,0,0);
+    cursor: pointer;
 }
 
 .selected p {
